--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/
 
 # Generated files
 .idea/**/contentModel.xml
@@ -214,3 +215,5 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+.DS_Store
